==> maichaell/STM32GEN_huaweiwx/STM32/cores/arduino/stm32/HardwareSerial.cpp <==
#include "HardwareSerial.h"
#include "stm32_gpio_af.h"

void HardwareSerial::begin(const uint32_t baud) {
  if (txBuffer == NULL) {
	static uint8_t tx[BUFFER_SIZE];
	static uint8_t static_tx_used = 0;

	if (!static_tx_used) {
	  txBuffer = (uint8_t*)tx;
		static_tx_used = true;
	} else {
	  txBuffer = (uint8_t*)malloc(BUFFER_SIZE);
	}
  }

  if (rxBuffer == NULL) {
  	static uint8_t rx[BUFFER_SIZE];
  	static uint8_t static_rx_used = 0;

  	if (!static_rx_used) {
  	  rxBuffer = (uint8_t*)rx;
  		static_rx_used = true;
  	} else {
  	  rxBuffer = (uint8_t*)malloc(BUFFER_SIZE);
  	}
  }

  if (handle == NULL) {
  	static UART_HandleTypeDef h = {};
  	static uint8_t static_handle_used = 0;

  	if (!static_handle_used) {
  		handle = &h;
  	static_handle_used = true;
  	} else {
  		handle = (UART_HandleTypeDef*)malloc(sizeof(UART_HandleTypeDef));
  	}
  }

  handle->Instance = instance;
  
#if defined(USART1) && (USE_SERIAL1)
  if (handle->Instance == USART1) {
    __HAL_RCC_USART1_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART1_IRQn, USART_PRIORITY, 0); //define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART1_IRQn); 
  }
#endif
  
#if defined(USART2) && (USE_SERIAL2)
  if (handle->Instance == USART2) {
    __HAL_RCC_USART2_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART2_IRQn, USART_PRIORITY, 0); //define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART2_IRQn); 
  }
#endif
  
#if defined(USART3) && (USE_SERIAL3)
  if (handle->Instance == USART3) {
    __HAL_RCC_USART3_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART3_IRQn, USART_PRIORITY, 0); //define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART3_IRQn); 
  }
#endif
  
#if defined(UART4) && (USE_SERIAL4)
  if (handle->Instance == UART4) {
    __HAL_RCC_UART4_CLK_ENABLE();
    HAL_NVIC_SetPriority(UART4_IRQn, USART_PRIORITY, 0);//define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(UART4_IRQn);
  }
#endif
#if defined(USART4) && (USE_SERIAL4)
  if (handle->Instance == USART4) {
    __HAL_RCC_USART4_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART4_IRQn, USART_PRIORITY, 0); //define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART4_IRQn); 
  }
#endif
  
#if defined(UART5) && (USE_SERIAL5)
  if (handle->Instance == UART5) {
    __HAL_RCC_UART5_CLK_ENABLE();
    HAL_NVIC_SetPriority(UART5_IRQn, USART_PRIORITY, 0);//define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(UART5_IRQn);
  }
#endif
#if defined(USART5) && (USE_SERIAL5)
  if (handle->Instance == USART5) {
    __HAL_RCC_USART5_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART5_IRQn, USART_PRIORITY, 0);//define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART5_IRQn);
  }
#endif

#if defined(USART6) && (USE_SERIAL6)
  if (handle->Instance == USART6) {
    __HAL_RCC_USART6_CLK_ENABLE();
    HAL_NVIC_SetPriority(USART6_IRQn, USART_PRIORITY, 0);//define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(USART6_IRQn);
  }
#endif

#if defined(LPUART1) && (USE_LPUART1)
  if (handle->Instance == LPUART1) {
    __HAL_RCC_LPUART1_CLK_ENABLE();
    HAL_NVIC_SetPriority(LPUART1_IRQn, USART_PRIORITY, 0);//define in stm32_def.h huaweiwx@sina.com 2017.12
    HAL_NVIC_EnableIRQ(LPUART1_IRQn);
	
    if((txPin < 0xff) && (rxPin <0xff))
       stm32AfLPUARTInit(instance, 
                  variant_pin_list[rxPin].port,
				  variant_pin_list[rxPin].pinMask,
                  variant_pin_list[txPin].port,
				  variant_pin_list[txPin].pinMask);
    else			  
       stm32AfLPUARTInit(instance, NULL,0,NULL,0);

   }
   else
	if((txPin < 0xff) && (rxPin <0xff))
		stm32AfUARTInit(instance, 
					variant_pin_list[rxPin].port,
					variant_pin_list[rxPin].pinMask,
					variant_pin_list[txPin].port,
					variant_pin_list[txPin].pinMask);
	else			  
		stm32AfUARTInit(instance, NULL,0,NULL,0);	   
 
#else
  if((txPin < 0xff) && (rxPin <0xff))
    stm32AfUARTInit(instance, 
                  variant_pin_list[rxPin].port,
				  variant_pin_list[rxPin].pinMask,
                  variant_pin_list[txPin].port,
				  variant_pin_list[txPin].pinMask);
  else			  
    stm32AfUARTInit(instance, NULL,0,NULL,0);
#endif
 
  handle->Init.BaudRate = baud; 
  handle->Init.WordLength = UART_WORDLENGTH_8B;
  handle->Init.StopBits = UART_STOPBITS_1; 
  handle->Init.Parity = UART_PARITY_NONE; 
  handle->Init.Mode = UART_MODE_TX_RX; 
  handle->Init.HwFlowCtl = UART_HWCONTROL_NONE; 
  
#if defined(LPUART1) && (USE_LPUART1) && defined(STM32L4)
  if (handle->Instance == LPUART1) {
    handle->Init.OneBitSampling = UART_ONE_BIT_SAMPLE_DISABLE;
    handle->AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
#if defined(USART_PRESC_PRESCALER)  /* L4R5/7 */
    handle->Init.ClockPrescaler = UART_PRESCALER_DIV1;
    handle->FifoMode = UART_FIFOMODE_DISABLE;
#endif	
  }	
  HAL_UART_Init(handle);
#if defined(USART_CR1_FIFOEN) /* L4R5/7 */
  HAL_UARTEx_SetTxFifoThreshold(handle, UART_TXFIFO_THRESHOLD_1_8);
  HAL_UARTEx_SetRxFifoThreshold(handle, UART_RXFIFO_THRESHOLD_1_8);
#endif

#else  
  handle->Init.OverSampling = UART_OVERSAMPLING_16; 
  HAL_UART_Init(handle);
#endif

  HAL_UART_Receive_IT(handle, &receive_buffer, 1);
    
}

void HardwareSerial::end(void) {
#if defined(USART1) && (USE_SERIAL1)
  if (handle->Instance == USART1) {
    HAL_NVIC_DisableIRQ(USART1_IRQn);
//    __HAL_RCC_USART1_CLK_DISABLE();
  }
#endif
  
#if defined(USART2) && (USE_SERIAL2)
  if (handle->Instance == USART2) {
    HAL_NVIC_DisableIRQ(USART2_IRQn); 
    __HAL_RCC_USART2_CLK_DISABLE();
  }
#endif
  
#if defined(USART3) && (USE_SERIAL3)
  if (handle->Instance == USART3) {
    HAL_NVIC_DisableIRQ(USART3_IRQn); 
    __HAL_RCC_USART3_CLK_DISABLE();
  }
#endif
  
#if defined(UART4) && (USE_SERIAL4)
  if (handle->Instance == UART4) {
    HAL_NVIC_DisableIRQ(UART4_IRQn);
    __HAL_RCC_UART4_CLK_DISABLE();
  }
#endif
#if defined(USART4) && (USE_SERIAL4)
  if (handle->Instance == USART4) {
    HAL_NVIC_DisableIRQ(USART4_IRQn); 
    __HAL_RCC_USART4_CLK_DISABLE();
  }
#endif
  
#if defined(UART5) && (USE_SERIAL5)
  if (handle->Instance == UART5) {
    HAL_NVIC_DisableIRQ(UART5_IRQn);
    __HAL_RCC_UART5_CLK_DISABLE();
  }
#endif
#if defined(USART5) && (USE_SERIAL5)
  if (handle->Instance == USART5) {
    HAL_NVIC_DisableIRQ(USART5_IRQn);
    __HAL_RCC_USART5_CLK_DISABLE();
  }
#endif

#if defined(USART6) && (USE_SERIAL6)
  if (handle->Instance == USART6) {
    HAL_NVIC_DisableIRQ(USART6_IRQn);
    __HAL_RCC_USART6_CLK_DISABLE();
  }
#endif

#if defined(LPUART1) && (USE_LPUART1)
  if (handle->Instance == LPUART1) {
    HAL_NVIC_DisableIRQ(LPUART1_IRQn);
    __HAL_RCC_LPUART1_CLK_DISABLE();
  }
#endif   
}

int HardwareSerial::available() {
    return rxEnd != rxStart;
}

int HardwareSerial::peek() {
    if (available()) {
    return rxBuffer[rxStart % BUFFER_SIZE];
  } else {
    return -1;
  }
}

int HardwareSerial::read() {
  if (available()) {
    return rxBuffer[rxStart++ % BUFFER_SIZE];
  } else {
    return -1;
  }
}
