==> lopple/arduino_core_ch32/cores/arduino/HardwareSerial.cpp <==
#include <stdio.h>
#include "Arduino.h"
#include "HardwareSerial.h"

void HardwareSerial::begin(unsigned long baud, byte config)
{
  uint32_t databits = 0;
  uint32_t stopbits = 0;
  uint32_t parity = 0;

  _baud = baud;
  _config = config;

  // Manage databits
  switch (config & 0x03) {
    case 0x00:
      databits = 6;
      break;
    case 0x01:
      databits = 7;
      break;
    case 0x02:
      databits = 8;
      break;
    case 0x03:
      databits = 9;
      break;
    default:
      databits = 8;
      break;
  }

  if ((config & 0x30) == 0x30) {
    parity = USART_Parity_Odd;
  } else if ((config & 0x20) == 0x20) {
    parity = USART_Parity_Even;
  } else {
    parity = USART_Parity_No;
  }


  switch ( (config & 0x0C) >> 2 ) {
    case 0x00:
      stopbits = USART_StopBits_1;
      break;
    case 0x01:
      stopbits = USART_StopBits_0_5;
      break;
    case 0x02:
      stopbits = USART_StopBits_2;
      break;
    case 0x03:
      stopbits = USART_StopBits_1_5;
      break;
    default:
      stopbits = USART_StopBits_1;
      break;
  }

  switch (databits) 
  {
#ifdef USART_WordLength_6b
    case 6: 
      databits = USART_WordLength_6b;
      break;
#endif 
#ifdef USART_WordLength_7b
    case 7: 
      databits = USART_WordLength_7b;
      break;
#endif
    case 8:
      databits = USART_WordLength_8b;
      break;
    case 9:
      databits = USART_WordLength_9b;
      break;
    default:
    case 0:
      Error_Handler();
      break;
  }
  uart_init(&_serial, (uint32_t)baud, databits, parity, stopbits);

#if(OPT_USART_INT==1)
  if (_serial.uart != NULL) {
    #if defined(USART1)
    if (_serial.uart == USART1) {
      USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(USART1_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(USART1_IRQn);
    }
    #endif
    #if defined(USART2)
    if (_serial.uart == USART2) {
      USART_ITConfig(USART2, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(USART2_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(USART2_IRQn);
    }
    #endif
    #if defined(USART3)
    if (_serial.uart == USART3) {
      USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(USART3_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(USART3_IRQn);
    }
    #endif
    #if defined(USART4)
    if (_serial.uart == USART4) {
      USART_ITConfig(USART4, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(USART4_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(USART4_IRQn);
    }
    #elif defined(UART4)
    if (_serial.uart == UART4) {
      USART_ITConfig(UART4, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(UART4_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(UART4_IRQn);
    }
    #endif
    #if defined(UART5)
    if (_serial.uart == UART5) {
      USART_ITConfig(UART5, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(UART5_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(UART5_IRQn);
    }
    #endif
    #if defined(USART6)
    if (_serial.uart == USART6) {
      USART_ITConfig(USART6, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(USART6_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(USART6_IRQn);
    }
    #endif
    #if defined(UART7)
    if (_serial.uart == UART7) {
      USART_ITConfig(UART7, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(UART7_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(UART7_IRQn);
    }
    #endif
    #if defined(UART8)
    if (_serial.uart == UART8) {
      USART_ITConfig(UART8, USART_IT_RXNE, ENABLE);
      NVIC_SetPriority(UART8_IRQn, UART_IRQ_PRIO);
      NVIC_EnableIRQ(UART8_IRQn);
    }
    #endif
  }
#endif
}

void HardwareSerial::end()
{
  // MMOLE: reintroduced RX buffer to properly implement read/available/peek methods
  // clear any received data
  _rx_buffer_head = _rx_buffer_tail;

  uart_deinit(&_serial);

#if(OPT_USART_INT==1)
  if (_serial.uart != NULL) {
    #if defined(USART1)
    if (_serial.uart == USART1) {
      NVIC_DisableIRQ(USART1_IRQn);
      USART_ITConfig(USART1, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(USART2)
    if (_serial.uart == USART2) {
      NVIC_DisableIRQ(USART2_IRQn);
      USART_ITConfig(USART2, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(USART3)
    if (_serial.uart == USART3) {
      NVIC_DisableIRQ(USART3_IRQn);
      USART_ITConfig(USART3, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(USART4)
    if (_serial.uart == USART4) {
      NVIC_DisableIRQ(USART4_IRQn);
      USART_ITConfig(USART4, USART_IT_RXNE, DISABLE);
    }
    #elif defined(UART4)
    if (_serial.uart == UART4) {
      NVIC_DisableIRQ(UART4_IRQn);
      USART_ITConfig(UART4, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(UART5)
    if (_serial.uart == UART5) {
      NVIC_DisableIRQ(UART5_IRQn);
      USART_ITConfig(UART5, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(USART6)
    if (_serial.uart == USART6) {
      NVIC_DisableIRQ(USART6_IRQn);
      USART_ITConfig(USART6, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(UART7)
    if (_serial.uart == UART7) {
      NVIC_DisableIRQ(UART7_IRQn);
      USART_ITConfig(UART7, USART_IT_RXNE, DISABLE);
    }
    #endif
    #if defined(UART8)
    if (_serial.uart == UART8) {
      NVIC_DisableIRQ(UART8_IRQn);
      USART_ITConfig(UART8, USART_IT_RXNE, DISABLE);
    }
    #endif
  }
#endif
}

int HardwareSerial::available(void)
{
  // MMOLE: reintroduced RX buffer to properly implement read/available/peek methods
  //return -1;
  return ((unsigned int)(SERIAL_RX_BUFFER_SIZE + _rx_buffer_head - _rx_buffer_tail)) % SERIAL_RX_BUFFER_SIZE;
}

int HardwareSerial::peek(void)
{
  // MMOLE: reintroduced RX buffer to properly implement read/available/peek methods
  // MMOLE 240316: Serial.parseInt() uses peek() with timeout to see if more data is available
   //return -1;
  if (_rx_buffer_head == _rx_buffer_tail) {
    return -1;
  } else {
    return _rx_buffer[_rx_buffer_tail];
  }
}

int HardwareSerial::read(void)
{
  unsigned char c;
  // MMOLE: reintroduced RX buffer to properly implement read/available/peek methods
/*
  if(uart_getc(&_serial, &c) == 0){
    return c;
  }else{
    return -1;
  }
*/

  // if the head isn't ahead of the tail, we don't have any characters
  if (_rx_buffer_head == _rx_buffer_tail) {
    return -1;
  } else {
    unsigned char c = _rx_buffer[_rx_buffer_tail];
    _rx_buffer_tail = (rx_buffer_index_t)(_rx_buffer_tail + 1) % SERIAL_RX_BUFFER_SIZE;
    return c;
  }
}
